kasm-network-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kasm-network-service
  namespace: default
spec:
  selector:
    app: kasm-workspaces-host
  ports:
    - name: https-traffic
      protocol: TCP
      port: 443
      targetPort: 443
  type: LoadBalancer
